networkpolicy/networkpolicy__basic_kafka_setup__jupyterhub__exception__system__egress__ports__443__nr1__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jupyterhub--exception--system--egress--ports--443--nr1
  namespace: jupyterhub
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 443
